Fix text overflow in media cards

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -226,3 +226,8 @@ html {
 .custom-file-label {
   overflow: hidden;
 }
+
+.media-body {
+  word-wrap: break-word;
+  word-break: break-word;
+}
